--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,17 +18,17 @@
 				"DavidAnson.vscode-markdownlint",
 				"dbaeumer.vscode-eslint",
 				"devzstudio.emoji-snippets",
-				"docsmsft.docs-article-templates",
-				"docsmsft.docs-authoring-pack",
-				"docsmsft.docs-build",
-				"docsmsft.docs-images",
-				"docsmsft.docs-linting",
-				"docsmsft.docs-markdown-to-mail",
-				"docsmsft.docs-metadata",
-				"docsmsft.docs-preview",
-				"docsmsft.docs-scaffolding",
-				"docsmsft.docs-yaml",
-				"docsmsft.learnlinter",
+				// "docsmsft.docs-article-templates",
+				// "docsmsft.docs-authoring-pack",
+				// "docsmsft.docs-build",
+				// "docsmsft.docs-images",
+				// "docsmsft.docs-linting",
+				// "docsmsft.docs-markdown-to-mail",
+				// "docsmsft.docs-metadata",
+				// "docsmsft.docs-preview",
+				// "docsmsft.docs-scaffolding",
+				// "docsmsft.docs-yaml",
+				// "docsmsft.learnlinter",
 				"donjayamanne.githistory",
 				"eamodio.gitlens",
 				"esbenp.prettier-vscode",
@@ -43,7 +43,7 @@
 				"hbenl.vscode-test-explorer",
 				"mhutchie.git-graph",
 				"ms-azuretools.vscode-docker",
-				"ms-dotnettools.vscode-dotnet-runtime",
+				// "ms-dotnettools.vscode-dotnet-runtime",
 				"ms-edgedevtools.vscode-edge-devtools",
 				"ms-vscode-remote.remote-containers",
 				"ms-vscode.remote-repositories",
